--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,11 @@
 
     </string-array>
     <string-array name="Ringtones">
-        <item>RingTone 1</item>
-        <item>RingTone 2</item>
-        <item>RingTone 3</item>
-        <item>RingTone 4</item>
+        <item>Loud RingTone 1</item>
+        <item>Loud RingTone 2</item>
+        <item>Loud RingTone 3</item>
+        <item>Loud RingTone 4</item>
+        <item>RingTone</item>
 
 
 
